WIP: Refacto Twitch module